# silph-scope

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
src/silph_scope/: __init__.py  backtest.py  data.py  runner.py  utils.py
tests/: test_utils.py
